--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,31 @@
 // app global css in SCSS form
+
+.text-main-headers {
+  font-family: 'Edu TAS Beginner', 'Helvetica Neue', Helvetica, Arial;
+}
+
+
+.small-screen-only {
+    @media (max-width: $breakpoint-xs-max) {
+        display: block;
+    }
+
+    @media (min-width: $breakpoint-sm-min) {
+        display: none;
+    }
+}
+
+.large-screen-only {
+    @media (max-width: $breakpoint-xs-max) {
+        display: none;
+    }
+
+    @media (min-width: $breakpoint-sm-min) {
+        display: block;
+    }
+}
+
+.constarain {
+    max-width: 975px;
+    margin: 0 auto;
+}
