--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -25,7 +25,16 @@
     }
 }
 
+.standart-margin-bottom {
+    margin-bottom: 25px;
+}
+
 .constarain {
     max-width: 975px;
+    margin: 0 auto;
+}
+
+.constarain-more {
+    max-width: 600px;
     margin: 0 auto;
 }
